--- a/public/css/style.css
+++ b/public/css/style.css
@@ -322,34 +322,30 @@ main {
 
 .product-card {
   max-width: 150px;
+  display: flex;
+  flex-direction: column;
+  border-radius: 20px;
+  outline: 2px solid #ab998c;
 }
 
 .product-img {
   width: 150px;
   height: 150px;
-}
-
-#products-featured .product-img {
-  background-color: darkred;
-}
-
-#products-new .product-img {
-  background-color: darkorange;
-}
-
-#products-bestsellers .product-img {
-  background-color: darkgreen;
+  border-radius: 20px 20px 0 0;
 }
 
 .product-name {
-  padding-top: 10px;
-  padding-bottom: 5px;
-  font-size: 24px;
+  padding: 10px 8px 10px;
+  font-size: 22px;
+  line-height: 24px;
+  font-weight: 500;
 }
 
 .product-price {
-  padding-bottom: 10px;
-  font-size: 16px;
+  padding: 0 8px 10px;
+  font-size: 18px;
+  font-family: "Noto Sans", sans-serif;
+  margin-top: auto;
 }
 
 #collections h2 {
