--- a/public/css/style.scss
+++ b/public/css/style.scss
@@ -548,4 +548,26 @@ footer {
       height: 300px;
     }
   }
+
+  // products
+  .product-cards {
+    gap: 30px;
+  }
+
+  .product-card {
+    max-width: 250px;
+  }
+  .product-img {
+    width: 250px;
+    height: 250px;
+  }
+  .product-name {
+    padding: 15px 10px 15px;
+    font-size: 26px;
+    line-height: 30px;
+  }
+  .product-price {
+    padding: 0 10px 15px;
+    font-size: 20px;
+  }
 }
