--- a/public/css/style.css
+++ b/public/css/style.css
@@ -294,18 +294,21 @@ main {
   display: flex;
   flex-wrap: wrap;
   justify-content: center;
-  gap: 20px;
+  gap: 15px;
 }
 .products-categories button {
-  font-size: 20px;
-  padding: 5px 10px;
+  font-size: 22px;
+  font-weight: 500;
+  color: #604d3e;
+  padding: 5px 15px;
   border-radius: 20px;
-  border: 2px solid grey;
-  transition: all 200ms ease-in-out;
+  outline: 2px solid #ab998c;
+  transition: color 200ms ease-in-out, outline-color 200ms ease-in-out;
 }
 .products-categories button.active {
-  border-color: darkgoldenrod;
-  background-color: palegoldenrod;
+  outline-color: #a0381f;
+  outline-width: 3px;
+  color: #a0381f;
 }
 
 .product-cards {
