--- a/public/css/style.css
+++ b/public/css/style.css
@@ -185,9 +185,7 @@ main {
   font-weight: 500;
 }
 #nav-links a {
-  padding: 0 10px;
-  border-radius: 20px;
-  border: 2px solid transparent;
+  border-bottom: 2px solid transparent;
 }
 #nav-links a:hover,
 #nav-links a:focus {
@@ -332,6 +330,13 @@ main {
   flex-direction: column;
   border-radius: 20px;
   outline: 2px solid #ab998c;
+  cursor: pointer;
+  transition: outline-color 200ms ease-out;
+}
+
+.product-card:hover {
+  outline-color: #a0381f;
+  outline-width: 3px;
 }
 
 .product-img {
@@ -458,7 +463,7 @@ footer h2 {
     height: 40px;
   }
   #nav-links ul {
-    padding: 0 10px;
+    padding: 0 20px;
     display: flex;
     gap: 20px;
     justify-content: space-between;
