--- a/public/css/style.css
+++ b/public/css/style.css
@@ -284,9 +284,12 @@ main {
   opacity: 1;
 }
 
-#products,
-#collections {
+#products {
   padding: 30px 20px;
+}
+
+#collections {
+  padding: 20px 20px 30px;
 }
 
 .products-categories {
@@ -357,13 +360,19 @@ main {
   margin-top: auto;
 }
 
+#collections {
+  max-width: 1000px;
+  margin: 0 auto;
+}
 #collections h2 {
-  font-size: 24px;
+  text-align: center;
+  font-size: 30px;
+  font-weight: 500;
   padding-bottom: 30px;
 }
 
 .collection-img {
-  max-width: 100%;
+  border-radius: 20px;
 }
 
 footer {
