--- a/public/css/style.scss
+++ b/public/css/style.scss
@@ -300,9 +300,11 @@ main {
   }
 }
 
-#products,
-#collections {
+#products {
   padding: 30px 20px;
+}
+#collections {
+  padding: 20px 20px 30px;
 }
 
 // products section
@@ -371,13 +373,20 @@ main {
 }
 
 // collections section
-#collections h2 {
-  font-size: 24px;
-  padding-bottom: 30px;
+#collections {
+  max-width: 1000px;
+  margin: 0 auto;
+
+  h2 {
+    text-align: center;
+    font-size: 30px;
+    font-weight: 500;
+    padding-bottom: 30px;
+  }
 }
 
 .collection-img {
-  max-width: 100%;
+  border-radius: 20px;
 }
 
 // footer
