Style desktop collections section

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -288,10 +288,6 @@ main {
   padding: 30px 20px;
 }
 
-#collections {
-  padding: 20px 20px 30px;
-}
-
 .products-categories {
   display: flex;
   flex-wrap: wrap;
@@ -361,7 +357,8 @@ main {
 }
 
 #collections {
-  max-width: 1000px;
+  padding: 20px 20px 30px;
+  max-width: 800px;
   margin: 0 auto;
 }
 #collections h2 {
@@ -372,7 +369,14 @@ main {
 }
 
 .collection-img {
+  cursor: pointer;
   border-radius: 20px;
+  outline: 3px solid transparent;
+  transition: outline-color 200ms ease-out;
+}
+
+.collection-img:hover {
+  outline-color: #a0381f;
 }
 
 footer {
@@ -529,6 +533,12 @@ footer h2 {
   .product-price {
     padding: 0 10px 15px;
     font-size: 20px;
+  }
+  #collections {
+    padding-top: 30px;
+  }
+  #collections h2 {
+    font-size: 36px;
   }
 }
 
