--- a/public/css/style.scss
+++ b/public/css/style.scss
@@ -214,7 +214,6 @@ main {
   z-index: 3;
   padding: 10px;
   display: flex;
-  height: 100%;
   flex-direction: column;
   align-items: flex-start;
   justify-content: flex-start;
@@ -267,19 +266,19 @@ main {
   .glide__bullet {
     cursor: pointer;
     color: $brown;
-  }
-  .glide__arrows {
-    position: absolute;
     z-index: 2;
-    display: flex;
-    width: 100%;
-    padding: 0 20px;
-    justify-content: space-between;
+  }
+  .glide__arrow {
+    position: absolute;
+    font-size: 30px;
     top: 50%;
     transform: translateY(-50%);
   }
-  .glide__arrow {
-    font-size: 30px;
+  .glide__arrow--left {
+    left: 20px;
+  }
+  .glide__arrow--right {
+    right: 20px;
   }
   .glide__bullets {
     position: absolute;
@@ -532,10 +531,6 @@ footer {
   // hero
   .hero-overlay {
     padding: 20px;
-    width: 100%;
-    max-width: 1000px;
-    left: 50%;
-    transform: translateX(-50%);
     gap: 20px;
 
     h2 {
