--- a/public/css/style.css
+++ b/public/css/style.css
@@ -201,7 +201,7 @@ main {
   top: 0;
   left: 0;
   z-index: 3;
-  padding: 10px;
+  padding: 20px;
   display: flex;
   flex-direction: column;
   align-items: flex-start;
@@ -489,7 +489,7 @@ footer h2 {
     border-radius: 20px;
   }
   .hero-overlay {
-    padding: 20px;
+    left: 60px;
     gap: 20px;
   }
   .hero-overlay h2 {
