--- a/public/css/style.scss
+++ b/public/css/style.scss
@@ -212,7 +212,7 @@ main {
   top: 0;
   left: 0;
   z-index: 3;
-  padding: 10px;
+  padding: 20px;
   display: flex;
   flex-direction: column;
   align-items: flex-start;
@@ -530,7 +530,7 @@ footer {
 
   // hero
   .hero-overlay {
-    padding: 20px;
+    left: 60px;
     gap: 20px;
 
     h2 {
