--- a/public/css/style.scss
+++ b/public/css/style.scss
@@ -195,7 +195,8 @@ main {
     font-weight: 500;
   }
   a {
-    border-bottom: 2px solid transparent;
+    padding-bottom: 7.5px;
+    border-bottom: 3px solid transparent;
   }
   a:hover,
   a:focus {
