--- a/public/css/style.scss
+++ b/public/css/style.scss
@@ -396,26 +396,32 @@ main {
 
 // footer
 footer {
-  background-color: lightgrey;
+  background-color: $bg-2;
   padding: 30px 20px;
   display: flex;
   flex-direction: column;
   flex-wrap: wrap;
-  gap: 20px;
-
-  h2 {
-    font-size: 20px;
-    padding-bottom: 10px;
-  }
+  gap: 30px;
 }
 
-.footer-links li:not(:last-child) {
-  padding-bottom: 5px;
+.footer-links {
+  h2 {
+    font-size: 20px;
+    font-weight: 500;
+    padding-bottom: 15px;
+  }
+  li:not(:last-child) {
+    padding-bottom: 10px;
+  }
+  a {
+    font-family: $font-secondary;
+    font-size: 16px;
+  }
 }
 
 .footer-socials ul {
   display: flex;
-  gap: 10px;
+  gap: 20px;
 }
 .social-icon {
   font-size: 24px;
