--- a/public/css/style.scss
+++ b/public/css/style.scss
@@ -397,11 +397,22 @@ main {
 // footer
 footer {
   background-color: $bg-2;
+}
+.footer-container {
+  max-width: 1000px;
+  margin: 0 auto;
   padding: 30px 20px;
   display: flex;
-  flex-direction: column;
   flex-wrap: wrap;
   gap: 30px;
+
+  a {
+    transition: all 100ms ease-out;
+  }
+  a:hover,
+  a:focus {
+    color: $accent;
+  }
 }
 
 .footer-links {
@@ -416,12 +427,22 @@ footer {
   a {
     font-family: $font-secondary;
     font-size: 16px;
+    border-bottom: 3px solid transparent;
+  }
+  a:hover,
+  a:focus {
+    border-color: $accent;
   }
 }
 
-.footer-socials ul {
-  display: flex;
-  gap: 20px;
+.footer-socials {
+  // display on new row
+  flex-basis: 100%;
+
+    ul {
+    display: flex;
+    gap: 20px;
+  }
 }
 .social-icon {
   font-size: 24px;
@@ -595,5 +616,25 @@ footer {
     h2 {
       font-size: 36px;
     }
+  }
+
+  // footer
+  .footer-container {
+    padding: 40px 20px;
+    gap: 40px
+  }
+  .footer-links {
+    h2 {
+      font-size: 24px;
+    }
+    li:not(:last-child) {
+      padding-bottom: 15px;
+    }
+    a {
+      font-size: 18px;
+    }
+  }
+  .social-icon {
+    font-size: 26px;
   }
 }
