Adjust position of desktop autocomplete popup

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -509,8 +509,10 @@ footer {
     margin-left: -5px;
   }
   #nav-search-bar .autoComplete_wrapper ul:not([hidden]) {
-    top: 60px;
-    border-radius: 20px;
+    z-index: -1;
+    padding-top: 40px;
+    top: 40px;
+    border-radius: 0 0 20px 20px;
   }
   .hero-overlay {
     left: 60px;
