--- a/public/css/style.css
+++ b/public/css/style.css
@@ -18,7 +18,8 @@ a {
 
 .sr-only:not(:focus):not(:active) {
   clip: rect(0 0 0 0);
-  clip-path: inset(50%);
+  -webkit-clip-path: inset(50%);
+          clip-path: inset(50%);
   height: 1px;
   overflow: hidden;
   position: absolute;
@@ -186,7 +187,6 @@ main {
   font-weight: 500;
 }
 #nav-links a {
-  padding-bottom: 7.5px;
   border-bottom: 3px solid transparent;
 }
 #nav-links a:hover,
@@ -219,7 +219,8 @@ main {
   font-size: 26px;
   line-height: 30px;
   background-color: rgba(255, 255, 255, 0.5);
-  backdrop-filter: blur(5px);
+  -webkit-backdrop-filter: blur(5px);
+          backdrop-filter: blur(5px);
   padding: 5px 10px;
   font-weight: 500;
 }
@@ -487,6 +488,10 @@ footer {
   #nav-links li {
     padding: 10px 0;
   }
+  #nav-links a {
+    border-width: 4px;
+    padding-bottom: 5.5px;
+  }
   #nav-search-bar {
     position: static;
   }
@@ -577,6 +582,4 @@ footer {
   .social-icon {
     font-size: 26px;
   }
-}
-
-/*# sourceMappingURL=style.css.map */
+}/*# sourceMappingURL=style.css.map */
