--- a/public/css/style.scss
+++ b/public/css/style.scss
@@ -195,7 +195,6 @@ main {
     font-weight: 500;
   }
   a {
-    padding-bottom: 7.5px;
     border-bottom: 3px solid transparent;
   }
   a:hover,
@@ -523,6 +522,10 @@ footer {
     }
     li {
       padding: 10px 0;
+    }
+    a {
+      border-width: 4px;
+      padding-bottom: 5.5px;
     }
   }
 
